refactor: change response body in controllers, replace response codes to 200